{
    "name": "InputActions",
    "maps": [
        {
            "name": "MainActionMap",
            "id": "d82b65a2-5369-48f8-a5d0-c70e91074f2c",
            "actions": [
                {
                    "name": "TogglePause",
                    "type": "Button",
                    "id": "977b0758-99e7-47db-bbad-6421c9e90a9a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleConstrucrion",
                    "type": "Button",
                    "id": "0626f558-3b50-4309-a3b1-358e02b6351f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "d7f51647-0928-4c31-b09d-edb272238850",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7df42c45-29fe-47a6-a199-8ef43d7ed6b9",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TogglePause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e0201e7f-50d9-4ad6-b858-23df7b8bc5e3",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleConstrucrion",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f2b1f1ce-e558-45ee-b6aa-e6b69eacba4e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}